--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ github_repo: "tpt-medical-it"
 
 # OPTIONAL: override baseurl and url if using a custom domain
 # Note: leave out the trailing / from this value.
-url: "https://Vintea01.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://tpt-ochanomizu.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 ###########################################################
 #########  Special Instructions for baseurl ###############
